# boostache

./: .gitignore  CMakeLists.txt  Demo.txt  Jamroot  Overview.md  README.md  boostache.sln  boostache.vcxproj  boostache.vcxproj.filters  test_template_engine.cpp
boost/: CMakeLists.txt
boost/boostache/: CMakeLists.txt  simple_parser.cpp  template_generate.hpp  template_object_interface.hpp
boost/cppte/: #cppte.hpp#  .#cppte.hpp  CMakeLists.txt  cppte.hpp  cppte.hpp~  simple_parser.cpp  template_context.hpp  template_engine.hpp  template_generate.hpp  template_parser.hpp
doc/liaw/: README.md
examples/: CMakeLists.txt  Jamfile  django.cpp  django_input.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example5.pb.cc  example5.pb.h  example5.proto  example6.cpp  footer.mst  main.cpp  simple_generate.cpp  simple_generate2.cpp
examples/company_report/: .gitignore  CMakeLists.txt  company_data.json  company_report_stache.cpp  report.tpl
examples/ctemplate/: hello.cpp  hello.tpl  invoice.cpp  invoice.tpl
include/boost/boostache/: boostache.hpp  django.hpp  simple_parser.hpp  stache.hpp
include/boost/boostache/backend/: compiler.hpp  django_compiler.hpp  stache_compiler.hpp
include/boost/boostache/backend/detail/: django_compiler.hpp  stache_compiler.hpp
include/boost/boostache/detail/: unwrap_variant_visitor.hpp
include/boost/boostache/frontend/: file_mapper.hpp  parse.hpp  stache.hpp  stache_ast.hpp  stache_ast_adapted.hpp  stache_grammar.hpp  stache_grammar_def.hpp  stache_model.hpp  stache_model_printer.hpp  stache_printer.hpp  stache_skipper.hpp  stache_skipper_def.hpp
include/boost/boostache/frontend/django/: ast.hpp  ast_adapted.hpp  grammar.hpp  grammar_def.hpp  printer.hpp
include/boost/boostache/frontend/stache/: ast.hpp  ast_adapted.hpp  grammar.hpp  grammar_def.hpp  printer.hpp
include/boost/boostache/model/: basic_render_extension.hpp  basic_test_extension.hpp  category.hpp  default_adapter.hpp  dynamic_model_printer.hpp  enable_fusion.hpp  helper.hpp  property_tree_adapter.hpp  render_traits.hpp  select_traits.hpp  stache_model.hpp  stache_model_printer.hpp  test_traits.hpp  unwrap_variant.hpp
include/boost/boostache/model/extensions/: google_protobuf.hpp  property_tree.hpp
include/boost/boostache/vm/: engine.hpp  engine_ast.hpp  generate.hpp  generate_extension.hpp  printer.hpp  tags.hpp  traits.hpp  unificator.hpp  uniform.hpp
include/boost/boostache/vm/detail/: engine_visitor.hpp  foreach.hpp  multi_context.hpp  select_context.hpp  stacked_context.hpp
include/boost/cppte/: simple_parser.hpp
include/boost/cppte/backend/: compiler.hpp  stache_compiler.hpp
include/boost/cppte/backend/detail/: stache_compiler.hpp
include/boost/cppte/front_end/: parse.hpp  stache.hpp  stache_ast.hpp  stache_ast_adapted.hpp  stache_grammar.hpp  stache_grammar_def.hpp  stache_printer.hpp
include/boost/cppte/frontend/: stache_ast.hpp  stache_ast_adapted.hpp  stache_grammar.hpp  stache_grammar_def.hpp  stache_model.hpp  stache_model_printer.hpp  stache_printer.hpp  stache_skipper.hpp  stache_skipper_def.hpp
include/boost/cppte/model/: default_adapter.hpp  dynamic_model_printer.hpp  property_tree_adapter.hpp  stache_dynamic_model_printer.hpp
include/boost/cppte/vm/: engine.hpp  engine_ast.hpp  generate.hpp  printer.hpp
include/boost/cppte/vm/detail/: engine_visitor.hpp  foreach.hpp
proof_of_concept/: grammar_type.cpp
src/: .gitignore  CMakeLists.txt  gmock_to_boost.hpp  test_change_delimiter.cpp  test_collections_plustache.cpp  test_html_escape_plustache.cpp  test_inverted_sections.cpp  test_liaw.cpp  test_multiple_plustache.cpp  test_nested_sections_plustache.cpp  test_partials_plustache.cpp  test_sections_plustache.cpp  test_simple_plustache.cpp  test_template_fixture.hpp
src/liaw2014/: CMakeLists.txt  render_ast.cpp  render_ast.hpp  render_data.hpp  renderer.cpp  renderer.hpp  template.hpp  types.hpp
test/: .gitignore  CMakeLists.txt  Jamfile  boost_test_to_junit.xls  run_boost_test  simple_generate_test.cpp  simple_parser.cpp  test_change_delimiter.cpp  test_collections.cpp  test_default_model.cpp  test_dynamic_model.cpp  test_html_escape.cpp  test_inverted_sections.cpp  test_json_model.cpp  test_model.cpp  test_multiple.cpp  test_mustache_demo.cpp  test_nested_sections.cpp  test_partials.cpp  test_sections.cpp  test_simple_parser.cpp  test_template_fixture.hpp  test_utils.hpp
test/django/: django_parser.cpp
test/django/parser_test_dir/: comment.input  variable.output
test/front_end/: Jamfile  adapt_test.cpp  grammar_basic.cpp
test/frontend/: .gitignore  CMakeLists.txt  Jamfile  adapt_test.cpp  compiler_basic.cpp  grammar_basic.cpp  partial.mustache
test/model/: CMakeLists.txt  render_traits.cpp  test_default_model.cpp  test_ptree_model.cpp  traits.cpp  unwrap_variant.cpp
test/mustache/: CMakeLists.txt  README.md  mustache_compiler.cpp  mustache_end2end.cpp  mustache_parser.cpp  test_change_delimiter.cpp  test_default_model.cpp  test_dynamic_model.cpp  test_html_escape.cpp  test_inverted_sections.cpp  test_partials.cpp  test_sections.cpp  test_template_fixture.hpp
test/mustache/compiler_test_dir/: initial.expect  initial.input  initial.test
test/mustache/end2end_test_dir/: collections1.expect  collections1.input  collections2.expect  collections2.input.disable  implicit.expect  implicit.input  implicit2.expect  implicit2.input  inverted_section1.expect  inverted_section1.input  king_duckz_1.expect  king_duckz_1.input.disable  multiple.expect  multiple.input  nested_sections1.expect  nested_sections1.input  partials1.expect  partials1.input  sections1.expect  sections1.input  spec_comment.expect  spec_comment.input  spec_interp.expect  spec_interp.input  spec_sections.expect  spec_sections.input
test/mustache/end2end_test_dir/known_failing_tests/: king_duckz_1.input
test/mustache/parser_test_dir/: section.expect  simple.expect  simple.input  typical.expect  typical.input
test/shared/: parser_test.cpp
test/vm/: CMakeLists.txt  foreach.cpp
